# CI-CD-workflow

./: README.md  azurepipelines.md  cmake.md  docs.md  issues.md
azure-pipelines/: azure-pipelines.yml  example.yml
circleci/: centos.yml  debian.yml  ubuntu.yml
cmake/: CMakeLists.txt
cmake/histogram_maker/: CMakeLists.txt
github/: actions.yml  docker-login-pipeline.yml
